fixed bug truncating tags

--- a/css/home.styl
+++ b/css/home.styl
@@ -5,8 +5,7 @@
 .splash-screen
   color: white
   background-color: #cb1001
-.register.below-nav
-  background-color: white
+
 .splash-title
   margin: 2.25em 0
 
@@ -98,6 +97,8 @@
       right: 1em
       margin-top: -12.5px
     .tags
+      p
+        overflow: visible
       overflow: hidden
       white-space: nowrap
       width: 250px
